[gd_scene load_steps=19 format=3 uid="uid://c2p0v4fivp2yt"]

[ext_resource type="Script" path="res://Assets/Components/SettingsModal/Settings.gd" id="1_xfbte"]
[ext_resource type="Texture2D" uid="uid://c4ofgrp6125sa" path="res://Assets/Sprites/SettingModalHeaderBg.png" id="2_34qn1"]
[ext_resource type="FontFile" uid="uid://bva5f1jhbtgtq" path="res://Assets/Fonts/static/Alegreya-Medium.ttf" id="3_1iwpc"]
[ext_resource type="Texture2D" uid="uid://dywatm1pglinr" path="res://Assets/Sprites/SettingsModalBg.png" id="4_1royu"]
[ext_resource type="Texture2D" uid="uid://byipidkxe2i0d" path="res://Assets/Sprites/SettingModalBack.png" id="4_68tu7"]
[ext_resource type="Texture2D" uid="uid://6pkces2q3x7i" path="res://Assets/Sprites/ToggleBorder.png" id="6_d82hp"]
[ext_resource type="Texture2D" uid="uid://e71pawliogic" path="res://Assets/Sprites/ToggleActiveState.png" id="6_xrfrk"]
[ext_resource type="Texture2D" uid="uid://dwwcou010nr4d" path="res://Assets/Sprites/ToggleNormalState.png" id="7_ivfsc"]
[ext_resource type="FontFile" uid="uid://jtqnafxmt04q" path="res://Assets/Fonts/static/Alegreya-Regular.ttf" id="9_eedjw"]

[sub_resource type="Theme" id="Theme_aqfe2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74rv6"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 0.662745)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ecfrb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p46ie"]
texture = ExtResource("2_34qn1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jdoih"]
texture = ExtResource("4_68tu7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_solaj"]
texture = ExtResource("4_68tu7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vtg4g"]
texture = ExtResource("4_1royu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jwxc5"]
texture = ExtResource("6_d82hp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lccgh"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = SubResource("Theme_aqfe2")
script = ExtResource("1_xfbte")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_74rv6")

[node name="ModalContainer" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -163.0
offset_right = 201.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ecfrb")

[node name="Header" type="Panel" parent="Panel/ModalContainer"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 4.0
offset_right = 201.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_p46ie")

[node name="Label" type="Label" parent="Panel/ModalContainer/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.988235, 0.823529, 0.611765, 1)
theme_override_fonts/font = ExtResource("3_1iwpc")
theme_override_font_sizes/font_size = 20
text = "SETTINGS"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/ModalContainer/Header"]
layout_mode = 0
offset_left = 17.0
offset_top = 12.0
offset_right = 56.0
offset_bottom = 47.0
theme_override_styles/normal = SubResource("StyleBoxTexture_jdoih")
theme_override_styles/pressed = SubResource("StyleBoxTexture_solaj")

[node name="Container" type="Panel" parent="Panel/ModalContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -269.0
offset_right = 182.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_vtg4g")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ModalContainer/Container"]
layout_mode = 0
offset_left = 58.0
offset_top = 163.0
offset_right = 302.0
offset_bottom = 203.0
theme_override_constants/separation = 100
alignment = 1

[node name="BgMusic" type="Panel" parent="Panel/ModalContainer/Container"]
layout_mode = 0
offset_left = 277.0
offset_top = 46.0
offset_right = 321.0
offset_bottom = 69.0
theme_override_styles/panel = SubResource("StyleBoxTexture_jwxc5")

[node name="CheckButton" type="CheckButton" parent="Panel/ModalContainer/Container/BgMusic"]
layout_mode = 0
offset_left = 41.0
offset_top = 26.0
offset_right = 85.0
offset_bottom = 57.0
rotation = 3.14159
theme_override_icons/checked = ExtResource("6_xrfrk")
theme_override_icons/unchecked = ExtResource("7_ivfsc")
theme_override_styles/normal = SubResource("StyleBoxTexture_lccgh")

[node name="SoundEffects" type="Panel" parent="Panel/ModalContainer/Container"]
layout_mode = 0
offset_left = 278.0
offset_top = 86.0
offset_right = 322.0
offset_bottom = 109.0
theme_override_styles/panel = SubResource("StyleBoxTexture_jwxc5")

[node name="CheckButton" type="CheckButton" parent="Panel/ModalContainer/Container/SoundEffects"]
layout_mode = 0
offset_left = 41.0
offset_top = 26.0
offset_right = 85.0
offset_bottom = 57.0
rotation = 3.14159
theme_override_icons/checked = ExtResource("6_xrfrk")
theme_override_icons/unchecked = ExtResource("7_ivfsc")
theme_override_styles/normal = SubResource("StyleBoxTexture_lccgh")

[node name="Notifications" type="Panel" parent="Panel/ModalContainer/Container"]
layout_mode = 0
offset_left = 279.0
offset_top = 125.0
offset_right = 323.0
offset_bottom = 148.0
theme_override_styles/panel = SubResource("StyleBoxTexture_jwxc5")

[node name="CheckButton" type="CheckButton" parent="Panel/ModalContainer/Container/Notifications"]
layout_mode = 0
offset_left = 41.0
offset_top = 26.0
offset_right = 85.0
offset_bottom = 57.0
rotation = 3.14159
theme_override_icons/checked = ExtResource("6_xrfrk")
theme_override_icons/unchecked = ExtResource("7_ivfsc")
theme_override_styles/normal = SubResource("StyleBoxTexture_lccgh")

[node name="Label" type="Label" parent="Panel/ModalContainer/Container"]
layout_mode = 0
offset_left = 40.0
offset_top = 45.0
offset_right = 183.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("9_eedjw")
text = "Background Music"

[node name="Label2" type="Label" parent="Panel/ModalContainer/Container"]
layout_mode = 0
offset_left = 41.0
offset_top = 86.0
offset_right = 184.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("9_eedjw")
text = "Sound Effects"

[node name="Label3" type="Label" parent="Panel/ModalContainer/Container"]
layout_mode = 0
offset_left = 40.0
offset_top = 126.0
offset_right = 183.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("9_eedjw")
text = "Notifications"

[connection signal="pressed" from="Panel/ModalContainer/Header/Button" to="." method="show_modal"]
[connection signal="toggled" from="Panel/ModalContainer/Container/BgMusic/CheckButton" to="." method="_on_bg_music_toggled"]
[connection signal="toggled" from="Panel/ModalContainer/Container/BgMusic/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="Panel/ModalContainer/Container/SoundEffects/CheckButton" to="." method="_on_sound_effects_toggled"]
[connection signal="toggled" from="Panel/ModalContainer/Container/SoundEffects/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="Panel/ModalContainer/Container/Notifications/CheckButton" to="." method="_on_notifications_toggled"]
